@@ -51,7 +51,7 @@ def run(options):
         lang |= set(options.languages)
         pool = Pool(db_name)
         pool.init(update=options.update, lang=list(lang),
-            installdeps=options.installdeps)
+            activatedeps=options.activatedeps)
 
         if options.update_modules_list:
             with Transaction().start(db_name, 0) as transaction:
