@@ -1,3 +1,4 @@
+* Rename "install-dependences" into "activate-dependencies"
 * Use recursive common table expression for child_of/parent_of operators
 * Add sql_cast on Field
 
